# lighthouse-automation

./: Cargo.toml
src/: main.rs
src/screen/: mod.rs
