[package]
name = "lighthouse-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = "0.2.1"
fantoccini = "0.21.0"
geckodriver = "0.34.0"
image = "0.25.2"
regex = "1.10.5"
screenshots = "0.5.3"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
